# Data-Science-Titanic-Analysis-Competition-Kaggle

./: README.md  pyproject.toml
code/: Analysis.ipynb  titanic_competition_analisys.ipynb
code_titanic/: Analysis.ipynb  Creating Features Engineering.ipynb  Generating The Model.ipynb  SWEETVIZ_REPORT.html  titanic_competition_analisys.ipynb
code_titanic_space/: Creating Features Engineering.ipynb  Generating The Model.ipynb  SWEETVIZ_REPORT.html  submission.csv  testando.ipynb  titanic_space_competition_analisys.ipynb
