[tool.poetry]
name = "titanic"
version = "0.1.0"
description = ""
authors = ["Nara Costa  <naracostaaaa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
