[tool.poetry]
name = "titanic"
version = "0.1.0"
description = ""
authors = ["Nara Costa  <naracostaaaa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
jupyter = "^1.0.0"
pandas = "^1.5.1"
sklearn = "^0.0"
matplotlib = "^3.6.1"
sweetviz = "^2.1.4"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
